# recurrence-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py  main.py  schemas.py  store.py  webhooks.py
automation/: daily-ops-brief.json  error-handler.json
engine/: __init__.py  expand.py  models.py
tests/: test_api.py  test_daily.py  test_end_conditions.py  test_monthly.py  test_oneoff.py  test_properties.py  test_validation.py  test_webhooks.py  test_weekly.py  test_window.py
web/: app.js  index.html  styles.css
