[project]
name = "recurrence-engine"
version = "1.0.0"
description = "Deterministic recurrence-rule expansion engine for task scheduling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Carl Villarosa", email = "jamescarlvillarosa@gmail.com" }]
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "pydantic>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "api"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["engine"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["engine", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["engine", "api"]
